[package]
name = "redis_bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "redis_bench"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
log = "0.4.20"

redis = "0.24.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
simplelog = "0.12.1"
