[package]
authors = ["flike <flikechen@gmail.com>"]
edition = "2021"
name = "redis_bench"
version = "0.1.0"
license = "MIT"
readme = "Readme.md"
repository = "https://github.com/flike/redis_bench"
description = """
A Redis Benchmark Client
"""

[[bin]]
name = "redis_bench"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
config = "0.14.0"
log = "0.4.20"

redis = "0.24.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
simplelog = "0.12.1"
